# spidy-scrapey

./: Cargo.toml
src/: api.rs  custom_serde.rs  data.rs  main.rs
