[package]
name = "spidy-scrapey"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32.0"
csv = "1"
failure = "0.1.2"
log = "0.4"
reqwest = "0.9.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stderrlog = "0.4"
